# fastapi_pro

./: .gitignore  README.md  pyproject.toml
fastapi_pro/: main.py
fastapi_pro/routers/test/: views.py
